christmas-shop/styles/footer.css
@import url(global.css);

footer {
  padding: 60px 8px;
  overflow: hidden;
  max-width: var(--section-width-max);
  margin: 0 auto;
}

.footer__container {
  display: flex;
  flex-direction: column;
  gap: 60px;
}

.footer__container__contacts {
  display: flex;
  gap: 12px;
}

.footer__container__contacts__card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
  flex: 1;

  text-align: center;

  padding: 20px;
  border-radius: var(--border-radius-default);

  background-color: var(--color--content-background);

  line-break: anywhere;

  cursor: pointer;
}

.footer__container__contacts__card * {
  transition: 0.2s;
}

.footer__container__contacts__card:hover * {
  color: var(--color--primary);
}

.footer__container__contacts__card__icon {
  width: 80px;
  height: 80px;
}

.footer__container__footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;

  text-align: center;
}

.footer__container__footer__social_links {
  display: flex;
  gap: 12px;
}

.footer__container__footer__social_link {
  padding: 8px;
}

.footer__container__footer__social_link>img {
  width: 24px;
  height: 24px;
}

/* TODO: COLORS */
.footer__container__footer__social_link:hover>img {
  fill: var(--color--primary);
  color: var(--color--primary);
  stroke: var(--color--primary);
}

.footer__container__footer__made_by:hover {
  color: var(--color--primary);
}

